--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "initialPlay": "tsc ./src/tests/puppeteerPlayerTest.ts && node ./src/tests/puppeteerPlayerTest"
   },
   "eslintConfig": {
     "extends": [
