--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^16.11.20",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -43,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/validator": "^13.7.1",
     "puppeteer": "^13.1.1"
   }
 }
