--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -13,11 +14,16 @@
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "sweetalert2": "^11.4.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.3"
   },
@@ -47,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
     "puppeteer": "^13.1.1"
   }
