--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SocketApiBaseUrl=http://localhost:8081
-BASEURL=http://localhost:8080
+REACT_APP_SOCKETAPIBASEURL=http://localhost:8081
+REACT_APP_BASEURL=http://localhost:8080
