improvong design and implementing user customization

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SOCKETAPIBASEURL=http://localhost:8081
-REACT_APP_BASEURL=http://localhost:8080
+REACT_APP_SOCKETAPIBASEURL=https://socket-checkers-server-123.herokuapp.com
+REACT_APP_BASEURL=https://checkers-login-server-12343211.herokuapp.com
